-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.9.0 Beta 2
If you have a QWindow set up to draw using OpenGL, and you use a QPainter to draw shapes on the current context, then there is a problem drawing polygons with a QPen style other than Qt::SolidLine.
Basically try to draw a rectangle by setting four points. The rectangle won't be solid unless you use SolidLine.
See the attached example. Expected result would like is described in this http://doc.qt.io/qt-5/qpainter.html#drawPolygon, but when DotLine used it won't be closed.
For Gerrit Dashboard: QTBUG-60397 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
193197,3 | Handle implicit close in QDashedStrokeProcessor | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |